<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".TipMainActivity" >
	<EditText
		android:id="@+id/editTextYourBill"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/linearLayout1"
		android:layout_alignParentTop="true"
		android:layout_alignRight="@+id/linearLayout1"
		android:ems="10"
		android:hint="@string/your_bill"
		android:inputType="numberDecimal" >
		<requestFocus />
	</EditText>
	<TextView
		android:id="@+id/textViewCalcTips"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/textViewTipIs"
		android:layout_alignBottom="@+id/textViewTipIs"
		android:layout_centerHorizontal="true"
		android:text="@string/blank" />
	<TextView
		android:id="@+id/textViewCalcTotal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/textViewTotalAmount"
		android:layout_alignBottom="@+id/textViewTotalAmount"
		android:layout_alignRight="@+id/textViewCalcTips"
		android:text="@string/blank" />
	<LinearLayout
		android:id="@+id/linearLayout1"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/editTextYourBill"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
		android:gravity="center_horizontal" >
		<Button
			android:id="@+id/buttonTipRateCheap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="calcTips"
			android:text="@string/tip_rate_cheap" />
		<Button
			android:id="@+id/buttonTipRateNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="calcTips"
			android:text="@string/tip_rate_normal" />
		<Button
			android:id="@+id/buttonTipRateGenerous"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="calcTips"
			android:text="@string/tip_rate_generous" />
	</LinearLayout>
	<TextView
		android:id="@+id/textViewTipIs"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/linearLayout1"
		android:layout_below="@+id/linearLayout1"
		android:layout_marginTop="14dp"
		android:text="@string/tip_is"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<TextView
		android:id="@+id/textViewTotalAmount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/textViewTipIs"
		android:layout_below="@+id/textViewTipIs"
		android:text="@string/total_amount"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<ImageView
		android:id="@+id/imageView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textViewTotalAmount"
		android:layout_centerHorizontal="true"
		android:src="@drawable/tipping_hints" />
</RelativeLayout>